Installation
***********************************************
See INSTALL file for details

ChangeLog
***********************************************

Version 0.115-dev
 Added:
  - Wine AppDB support;
  - A lot of GUI improvements;

 Fixed:
  - A lot of fixes and speedups;
  - Removed _junk_ WineBinaryLauncher class;
  - Removed _junk_ includes;
  - MainWindow class cleanup;
  - Deprecated wineprefixcreate command was replaced by wineboot;
  - Fixed memory leaks repported by Valgrid;
  - Fixed crush while drop exesting icon;
  - Fixed not critical error for fake C: symlink;
  - Fixed white spaces chatch in wine app run engine;
  - Fixed cmake: appprefix setting now overrides default icon and desktop places;
  - Fixed strage locale bug on some Slakware distros;

Version 0.114-r1
 Fixed:
  - Fixed wrong wine C: drive symlink while create new Fake Drive (thx 2 Kyrill Detinov);
  - Fixed Russian spelling;
  - Fixed some text layouts;

Version 0.114
 Added:
  - New Registry read\write engine;
  - New color option at Fake drive creation\update wizard;
  - New wine settings in Fake drive creation\update wizard;
  - Fake drive update wizard now can read actual wine registry configuration;
  - Filter text field for q4wine icons;
  - New Spanish translation (thx 2 Carlos Ignacio Ruax);
  - New Italian translation (thx 2 Ercole Carpanetto);
  - New FreeBSD mount and umount scripts (thx 2 Sergey V. Dyatko);
  
 Fixed:
  - Removed _junk_ translation strings from source code and UI;
  - Fix for misfunctioning check wether or not to use ICOTOOLS. (thx 2 Impulze);
  - Prefix combobox change do not set right Prefix in Prefix tree view;
  - Fake drive update wizard now remove registry key while user reset it to 'Default' state;
  - Fix for prefix import and export; 
  - And some small fixes for icoutils; 

Version 0.113
 Added:
  - Added embeded q4wine-mount (This is a copy of fuseiso + RH path);
       Note: use this if you too lazy to compile fuseiso from SF and apply pathes;