@@ -209,6 +209,9 @@
      <layout class="QVBoxLayout">
       <item>
        <widget class="QTabWidget" name="twbGeneral">
+        <property name="autoFillBackground">
+         <bool>true</bool>
+        </property>
         <property name="currentIndex">
          <number>0</number>
         </property>
